scss/templates/components/d-navigation.scss
.category-navigation,
.dc-navigation-container {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  position: relative;
  width: 100%;
}

.dc-navigation-container {
  .category-breadcrumb {
    flex: 1;
    float: none;
    min-width: 100%;
  }

  .category-actions {
    position: absolute;
    top: 0.25rem;
    right: 0;
  }

  .page-description {
    flex: 1;
    float: none;
    margin: 0 0 1rem;
    min-width: 100%;
  }

  // Avoid to show the link to catefories that will make the user go to the homepage
  a[href="/categories"] {
    display: none;
  }
}

.category-navigation {
  .category-breadcrumb,
  .category-description {
    flex: 1;
    float: none;
    min-width: 100%;
  }

  .category-actions {
    position: absolute;
    top: 0.25rem;
    right: 0;

    .notifications-button .d-icon-caret-down {
      display: none;
    }
  }
}

.category-actions {
  .select-kit.dropdown-select-box .dropdown-select-box-header {
    padding: 0.375rem 0.75rem;
    min-height: 0;
    border-radius: 0.25rem;
  }
}

ol.category-breadcrumb {
  float: none;
  margin: 0;

  .select-kit.combo-box .select-kit-header {
    background: transparent;
    border: none;
    font-size: 2rem;
    padding: 0;
  }

  .select-kit.single-select.is-expanded .select-kit-header {
    outline: none;
  }

  .badge-wrapper.bullet {
    align-items: center;
    display: flex;

    .badge-category {
      color: $gray;
    }

    .badge-category-bg {
      margin-right: 0.5rem;
    }
  }
}

